<resources>
    <string name="app_name">forzenbook</string>
    <!--
    Create Account Page
    -->
    <string name="top_bar_text_create_account">Create Account</string>
    <string name="create_account_error_title">Error</string>
    <string name="create_account_error_generic">There was an error when
        trying to send a request for account creation</string>
    <string name="create_account_error_user_exists">User already exists</string>
    <string name="create_account_first_name_prompt">First Name</string>
    <string name="create_account_first_name_error_length">First Names can only
        be 20 characters or less</string>
    <string name="create_account_first_name_error_invalid_characters">First Names can only
        have letters</string>
    <string name="create_account_last_name_prompt">Last Name</string>
    <string name="create_account_last_name_error_length">Last Names can only
        be 20 characters or less</string>
    <string name="create_account_last_name_error_invalid_characters">Last Names can only
        have letters</string>
    <string name="create_account_date">%1$d-%2$d-%3$d</string>
    <string name="create_account_birth_date_prompt">Birth Date</string>
    <string name="create_account_birth_date_error">Invalid birth date,
        must be 13 or older</string>
    <string name="create_account_email_prompt">Email</string>
    <string name="create_account_email_error">Invalid email</string>
    <string name="create_account_location_prompt">Location</string>
    <string name="create_account_location_error">Locations cannot be longer
        than 64 characters</string>
    <string name="create_account_submit">Create Account</string>
    <!--
    Login Page
    -->
    <string name="login_error_title">Error</string>
    <string name="login_error">There was an error trying to login</string>
    <string name="login_info_title">Success!</string>
    <string name="login_info">If there is an account associated with the email, an email will be sent to it. You will receive a validation code,
        please enter it below.</string>
    <string name="login_button_text">Login</string>
    <string name="login_email_prompt">Email</string>
    <string name="login_email_error_format">Invalid email format</string>
    <string name="login_email_error_length">Email length cannot be longer than 64 characters</string>
    <string name="login_code_prompt">Code</string>
    <string name="login_code_error">Invalid Code</string>
    <string name="login_create_account_text">Create Account</string>
    <!--
    Post Page
    -->
    <string name="post_top_bar_text">Create Post</string>
    <string name="post_warning_text">Posts can only be %1$d characters long</string>
    <string name="post_text_label">Enter your post!</string>
    <string name="post_error">There was an error when trying to create your post</string>
    <string name="post_gallery_button_text">Choose Image</string>
    <string name="post_gallery_change_image">Change Selection</string>
    <!--
    Feed Page
    -->
    <string name="feed_top_bar_text">Home</string>
    <string name="feed_post_icon">Poster Icon</string>
    <string name="feed_post_image">Post Image</string>
    <string name="feed_error_body">Your Feed had an error.</string>
    <!--
    SearchResult Page
    -->
    <string name="search_result_title_user">Posts by %1$s</string>
    <string name="search_result_title_query">Search Results</string>
    <string name="search_result_loading_title">Searching…</string>
    <string name="search_result_error">An error occurred</string>
    <!--
    Search Page
    -->
    <string name="search_error">Error retrieving search</string>
    <string name="search_label">Search</string>
    <string name="search_error_body">An error occurred while you were searching</string>
    <!--
    Generic usage
    -->
    <string name="generic_error_title">Error</string>
    <string name="generic_success_title">Success!</string>
    <string name="generic_dialog_confirm">OK</string>
    <string name="user_name">%1$s %2$s</string>
    <string name="submit_invalid_toast">Invalid input</string>
    <!--
    Bottom Navigation bar
    -->
    <string name="home_nav_text">Home</string>
    <string name="search_nav_text">Search</string>
    <string name="profile_nav_text">Profile</string>
    <!--
    Profile
    -->
    <string name="profile_title">Profile</string>
    <string name="profile_joined">Joined: %1$s</string>
    <string name="profile_error_body">There was an error when trying to view this profile</string>
    <string name="profile_selector_about">About</string>
    <string name="profile_selector_posts">Posts</string>
    <string name="profile_edit_about_label">Edit About</string>
    <string name="profile_error_loading_body">There was an error while loading this profile.</string>
    <string name="profile_error_icon_body">There was an error with updating your profile image.</string>
    <string name="profile_error_about_body">There was an error with updating your about me.</string>
    <string name="profile_error_posts_body">There was an error when trying to view this users posts.</string>
    <string name="profile_submit_change">Submit Change</string>
    <string name="profile_about_default">Hello my name is %1$s %2$s!</string>
    <string name="profile_paging_button_up">Load newer posts</string>
    <string name="profile_paging_button_down">Load older posts</string>
    <!--
    Content Descriptions
    -->
    <string name="lion_icon">Yellow lion</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="calendar_icon">Calendar</string>
    <string name="app_logo_image">app logo Image</string>
    <string name="text_toggle_text">Toggle to Text</string>
    <string name="text_toggle_image">Toggle to Image</string>
    <string name="post_send_icon">Send Post Button</string>
    <string name="feed_new_post_icon">Create Post Icon</string>
    <string name="home_button">Home Button</string>
    <string name="back_button">Back Button</string>
    <string name="post_send_image">Your selected image</string>
    <string name="create_post_button">Create Post</string>
    <string name="home_nav_button">Home navigation Button</string>
    <string name="search_nav_button">Search navigation Button</string>
    <string name="profile_nav_button">Profile navigation Button</string>
    <string name="profile_edit_button">Edit Button for your profile</string>
    <string name="profile_edit_submit_button">Edit Submit Button for your profile</string>
    <string name="profile_change_image_description">Change Image Button</string>
    <string name="profile_profile_picture">Users Profile Image</string>
</resources>