<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lion_yellow">

    <FrameLayout
        android:id="@+id/loginLayoutHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/loginImage"
                style="@style/loginImageStyle"
                android:contentDescription="@string/app_logo_image" />

            <TextView
                android:id="@+id/loginTitle"
                style="@style/titleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gridx4"
                android:text="@string/app_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputEmailBody"
                style="@style/inputBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_email_prompt">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmailText"
                    style="@style/inputFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailErrorText"
                style="@style/errorTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputCodeBody"
                style="@style/inputBodyStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_code_prompt"
                android:visibility="gone">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCodeText"
                    style="@style/inputFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/codeErrorText"
                style="@style/errorTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_code_error" />

            <FrameLayout
                android:id="@+id/loginSubmitButton"
                style="@style/buttonFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/loginSubmitText"
                    style="@style/buttonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_button_text" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/loginSubmitProgressIndicator"
                    style="@style/buttonLoadIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>

            <Space
                android:id="@+id/loginLinkPad"
                android:layout_width="match_parent"
                android:layout_height="@dimen/gridx4" />

            <TextView
                android:id="@+id/loginCreateAccountLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gridx4"
                android:paddingBottom="@dimen/gridx4"
                android:text="@string/login_create_account_text"
                android:textAlignment="center"
                android:textColor="?legacyOnBackground"
                android:textSize="@dimen/subtitle1" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/loginClickBlocker"
            style="@style/clickBlocker"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>


</ScrollView>
