<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/feedMainBody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?legacySecondaryBackground">

        <Toolbar
            android:id="@+id/feedLayoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="?legacyBackground"
            android:elevation="@dimen/staticGridx1"
            android:paddingEnd="@dimen/gridx1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/feed_top_bar_text"
                android:textColor="?legacyOnBackground"
                android:textSize="@dimen/body2" />

        </Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/feedPostsRecycler"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/staticGridx12">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/feedBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?legacyBackground"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/feedHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/gridx2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:src="@drawable/home_icon"
                android:tint="?legacyOnBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/home_nav_text"
                android:textColor="?legacyOnBackground" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/gridx2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:src="@drawable/search_icon"
                android:tint="?legacyOnBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="@string/search_nav_text"
                android:textColor="?legacyOnBackground" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>